@@ -1,5 +1,6 @@
 package com.pimenta.petshop.service;
 
+import com.pimenta.petshop.enums.ROLE;
 import com.pimenta.petshop.exception.NotFoundException;
 import com.pimenta.petshop.mapper.UsuarioMapper;
 import com.pimenta.petshop.model.UsuarioDTO;
@@ -11,7 +12,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.test.context.support.WithMockUser;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,7 +22,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-class UsuarioServiceTest {
+public class UsuarioServiceTest {
 
     @Mock
     private UsuarioRepository usuarioRepository;
@@ -34,20 +37,24 @@ class UsuarioServiceTest {
     private UsuarioEntity usuarioEntity;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         usuarioDTO = new UsuarioDTO();
         usuarioDTO.setCpf("12345678901");
         usuarioDTO.setNome("Teste");
-        usuarioDTO.setSenha("senha123");
+        usuarioDTO.setROLE(ROLE.ADMIN);
+        usuarioDTO.setSenha("senha");
 
-        usuarioEntity = new UsuarioEntity();
-        usuarioEntity.setCpf("12345678901");
-        usuarioEntity.setNome("Teste");
-        usuarioEntity.setSenha("hashedSenha");
+        usuarioEntity = UsuarioEntity.builder()
+                .cpf("12345678901")
+                .nome("Teste")
+                .ROLE(ROLE.ADMIN)
+                .senha("hashedSenha")
+                .build();
     }
 
     @Test
-    void testCreateUsuario() {
+    @WithMockUser(roles = "ADMIN")
+    public void testCreateUsuario() {
         when(usuarioMapper.toEntity(usuarioDTO)).thenReturn(usuarioEntity);
         when(usuarioRepository.save(usuarioEntity)).thenReturn(usuarioEntity);
         when(usuarioMapper.toDto(usuarioEntity)).thenReturn(usuarioDTO);
@@ -55,39 +62,48 @@ class UsuarioServiceTest {
         UsuarioDTO result = usuarioService.createUsuario(usuarioDTO);
 
         assertNotNull(result);
-        assertEquals("12345678901", result.getCpf());
+        assertEquals(usuarioDTO, result);
         verify(usuarioRepository, times(1)).save(usuarioEntity);
     }
 
     @Test
-    void testGetAllUsuarios() {
-        when(usuarioRepository.findAll()).thenReturn(List.of(usuarioEntity));
+    @WithMockUser(roles = "ADMIN")
+    public void testGetAllUsuarios() {
+        List<UsuarioEntity> usuarioEntities = Collections.singletonList(usuarioEntity);
+        List<UsuarioDTO> usuarioDTOs = Collections.singletonList(usuarioDTO);
+
+        when(usuarioRepository.findAll()).thenReturn(usuarioEntities);
         when(usuarioMapper.toDtoWithoutPassword(usuarioEntity)).thenReturn(usuarioDTO);
 
-        List<UsuarioDTO> usuarios = usuarioService.getAllUsuarios();
+        List<UsuarioDTO> result = usuarioService.getAllUsuarios();
 
-        assertFalse(usuarios.isEmpty());
-        assertEquals(1, usuarios.size());
+        assertNotNull(result);
+        assertEquals(usuarioDTOs, result);
         verify(usuarioRepository, times(1)).findAll();
     }
 
     @Test
-    void testGetUsuarioByCpf_Success() {
+    public void testGetUsuarioByCpf() {
         when(usuarioRepository.findByCpf("12345678901")).thenReturn(Optional.of(usuarioEntity));
-        when(usuarioMapper.toDtoWithoutPassword(usuarioEntity)).thenReturn(usuarioDTO);
+        when(usuarioMapper.toDto(usuarioEntity)).thenReturn(usuarioDTO);
 
         UsuarioDTO result = usuarioService.getUsuarioByCpf("12345678901");
 
         assertNotNull(result);
-        assertEquals("12345678901", result.getCpf());
-        verify(usuarioRepository, times(1)).findByCpf("12345678901");
+        assertEquals(usuarioDTO, result);
     }
 
     @Test
-    void testGetUsuarioByCpf_NotFound() {
-        when(usuarioRepository.findByCpf("00000000000")).thenReturn(Optional.empty());
+    public void testGetUsuarioByCpf_NotFound() {
+        when(usuarioRepository.findByCpf("12345678901")).thenReturn(Optional.empty());
 
-        assertThrows(NotFoundException.class, () -> usuarioService.getUsuarioByCpf("00000000000"));
-        verify(usuarioRepository, times(1)).findByCpf("00000000000");
+        assertThrows(NotFoundException.class, () -> usuarioService.getUsuarioByCpf("12345678901"));
+    }
+
+    @Test
+    @WithMockUser(roles = "ADMIN")
+    public void testDeleteUsuario() {
+        usuarioService.deleteUsuario("12345678901");
+        verify(usuarioRepository, times(1)).deleteByCpf("12345678901");
     }
 }
